--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
     </title>
 
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.min.css" type="text/css">
 
     <!-- Custom Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
@@ -26,10 +26,10 @@
     <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css" type="text/css">
 
     <!-- Plugin CSS -->
-    <link rel="stylesheet" href="/css/animate.min.css" type="text/css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/animate.min.css" type="text/css">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/css/creative.css" type="text/css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/creative.css" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -47,15 +47,15 @@
     {{ content }} 
     
     <!-- jQuery -->
-    <script src="/js/jquery.js"></script>
+    <script src="{{ site.baseurl }}/js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="/js/jquery.easing.min.js"></script>
-    <script src="/js/jquery.fittext.js"></script>
-    <script src="/js/wow.min.js"></script>
+    <script src="{{ site.baseurl }}/js/jquery.easing.min.js"></script>
+    <script src="{{ site.baseurl }}/js/jquery.fittext.js"></script>
+    <script src="{{ site.baseurl }}/js/wow.min.js"></script>
 
     <!-- Custom Theme JavaScript -->
     <script src="/js/creative.js"></script>
