--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,7 +8,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{{ site.baseurl }}{{ post.url }}/">Start Bootstrap</a>
+                <a class="navbar-brand" href="{{ site.baseurl }}{{ post.url }}/">Secure Camera Capture</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
