Changed Navigation of Pages

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,28 +19,28 @@
                     {% else %}
                       <li>
                     {% endif %}
-                    <a href="{{ site.baseurl }}{{ post.url }}/about.html">About</a></li>
+                    <a href="{{ site.baseurl }}/about.html">About</a></li>
 
                     {% if page.url == '/services.html' %}
                       <li class="active">
                     {% else %}
                       <li>
                     {% endif %}
-                    <a href="{{ site.baseurl }}{{ post.url }}/services.html">Services</a></li>
+                    <a href="{{ site.baseurl }}/services.html">Services</a></li>
 
                     {% if page.url == '/portfolio.html' %}
                       <li class="active">
                     {% else %}
                       <li>
                     {% endif %}
-                    <a href="{{ site.baseurl }}{{ post.url }}/portfolio.html">Portfolio</a></li>
+                    <a href="{{ site.baseurl }}/portfolio.html">Portfolio</a></li>
 
                     {% if page.url == '/contact.html' %}
                       <li class="active">
                     {% else %}
                       <li>
                     {% endif %}
-                    <a href="{{ site.baseurl }}{{ post.url }}/contact.html">Contact</a></li>
+                    <a href="{{ site.baseurl }}/contact.html">Contact</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
