--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
     <script src="{{ site.baseurl }}/js/wow.min.js"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="/js/creative.js"></script>
+    <script src="{{ site.baseurl }}/js/creative.js"></script>
 
 </body>
 
