Updated Content, Added New Project Page and Team Page

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,20 +20,20 @@
                       <li>
                     {% endif %}
                     <a href="{{ site.baseurl }}/about.html">About</a></li>
-
-                    {% if page.url == '/services.html' %}
+                    
+                    {% if page.url == '/team.html' %}
                       <li class="active">
                     {% else %}
                       <li>
                     {% endif %}
-                    <a href="{{ site.baseurl }}/services.html">Services</a></li>
-
-                    {% if page.url == '/portfolio.html' %}
+                    <a href="{{ site.baseurl }}/team.html">Team</a></li>
+                    
+                    {% if page.url == '/project.html' %}
                       <li class="active">
                     {% else %}
                       <li>
                     {% endif %}
-                    <a href="{{ site.baseurl }}/portfolio.html">Portfolio</a></li>
+                    <a href="{{ site.baseurl }}/project.html">Project</a></li>
 
                     {% if page.url == '/contact.html' %}
                       <li class="active">
