Mobile Compatible on project.html

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1109,6 +1109,12 @@ img {
   vertical-align: middle;
 }
 .img-responsive,
+.img-responsive-prj1,
+.img-responsive-prj2,
+.img-responsive-prj3,
+.img-responsive-prj4,
+.img-responsive-prj5,
+.img-responsive-prj6,
 .thumbnail > img,
 .thumbnail a > img,
 .carousel-inner > .item > img,
